# kirami-plugin-bawiki

./: pyproject.toml
kirami_plugin_bawiki/: __init__.py  config.py
kirami_plugin_bawiki/command/: stu_fav.py  update_future.py  voice.py
kirami_plugin_bawiki/data/: gacha.py  gamekee.py
nonebot_plugin_bawiki/: __init__.py  util.py
nonebot_plugin_bawiki/command/: calender.py  raid.py
nonebot_plugin_bawiki/data/: schaledb.py
nonebot_plugin_bawiki/help/: pic_menu.py
