[project]
name = "kirami-plugin-bawiki"
version = "0.9.3"
description = "A kiramibot plugin for Blue Archive."
authors = [
    { name = "student_2333", email = "lgc2333@126.com" },
    { name = "Akirami", email = "akiramiaya@outlook.com" },
]
dependencies = [
    "kiramibot>=0.3.1",
    "nonebot-adapter-onebot>=2.1.1",
    "beautifulsoup4>=4.11.1",
    "lxml>=4.9.1",
    "pil-utils>=0.1.4",
    "pypinyin>=0.49.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
keywords = ["blue archive", "kiramibot", "bot", "qq"]
classifiers = [
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Chat :: ICQ",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Games/Entertainment :: Side-Scrolling/Arcade Games",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
]

[project.urls]
homepage = "https://github.com/lgc2333/nonebot-plugin-bawiki/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
